Added privacy policy for Facebook apps

--- a/catalog/templates/login.html
+++ b/catalog/templates/login.html
@@ -142,7 +142,7 @@ function signInCallback(authResult) {
 
         </button>
 <!--END FACEBOOK SIGN IN -->
-
+        <a href="{{url_for('privacyPage')}}">Facebook Privacy Policy</a>
   </body>
 
 </html>
