--- a/catalog/templates/main.html
+++ b/catalog/templates/main.html
@@ -4,6 +4,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+        <meta name="google-site-verification" content="iFdCzUlMSpF5clQC-LloPRAzYLk4lgvvRIZ6TBqYzRQ" />
 	</head>
 	<body>
 		<div class="container">
