--- a/catalog/templates/main.html
+++ b/catalog/templates/main.html
@@ -5,6 +5,9 @@
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
         <meta name="google-site-verification" content="iFdCzUlMSpF5clQC-LloPRAzYLk4lgvvRIZ6TBqYzRQ" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+        <link href="https://fonts.googleapis.com/css?family=Alegreya|Alegreya+Sans|Merriweather|Merriweather+Sans|Nunito|Nunito+Sans|Quattrocento|Quattrocento+Sans|Roboto|Roboto+Mono|Roboto+Slab" rel="stylesheet">
 	</head>
 	<body>
 		<div class="container">
@@ -12,4 +15,5 @@
 			{% endblock %}
 		</div>
 	</body>
+
 </html>
