--- a/catalog/templates/publiczones.html
+++ b/catalog/templates/publiczones.html
@@ -6,10 +6,11 @@
             <a href="{{url_for('showLogin')}}">Click Here to Log in </a>
         </div>
     </div>
-    <div class="row divider blue">
+    <div class="row divider red">
+        <h1>Museum Zones</h1>
         <div class="col-md-12"></div>
     </div>
-    <div class="row banner main blur">
+    <div class="row banner main">
         <div class="col-md-1"></div>
         <div class="col-md-11 padding-none">
             
@@ -28,11 +29,10 @@
         {% endif %}
     {% endwith %}
 
-</div>
-<h1>Museum Zones</h1>
+    </div>  
 
-
-    
+    <p>Instructions: Click zones below for description of artifacts contained within zone.</p>
+    <p>You must be logged in to create new zones or objects.</p>
     <div class="row padding-top padding-bottom">
         <div class="col-md-1"></div>
         <div class="col-md-10 padding-none">
