--- a/catalog/templates/zones.html
+++ b/catalog/templates/zones.html
@@ -6,13 +6,14 @@
 		<div class="col-md-2 text-right">
 					</div>
 	</div>
-	<div class="row divider blue">
+	<div class="row divider red">
+		<h1>Museum Zones</h1>
 		<div class="col-md-12"></div>
 	</div>
 	<div class="row banner main">
 		<div class="col-md-1"></div>
 		<div class="col-md-11 padding-none">
-			<h1>Museum Zones</h1>
+			
 		</div>
 	</div>
 
@@ -29,7 +30,8 @@
     {% endwith %}
 
 </div>
-	
+	<p>Instructions: Click zones below for description of artifacts contained within zone.</p>
+    <p>You must be logged in to create new zones or objects.</p>
 	<div class="row padding-top padding-bottom">
 		<div class="col-md-1"></div>
 		<div class="col-md-10 padding-none">
